all code completed with frontend testing